# leaf2

./: .gitattributes  .gitignore  Cargo.toml  README.md  bibliography.bib  conf.typ  data_wrangler.py  experiments.md  framebar.py  graph.py  instructions.md  main.py  main.typ  memo.typ  memo2.typ  pyproject.toml  shared_clock.py  testnus.py  wordcounter.txt
art/: american_elm.glb  elm_point_cloud.ply  points.ply
docs/: docs.html
examples/: 2026-1-19-conf.typ  2026-1-19-main.typ
proompts/: 26-3-9.txt
shaders/: a.mesh.frag  a.mesh.glsl  leaf.frag  leaf.vert
src-py/: compute_buffer_example2.py  data_wrangler.py  framebar.py  graph.py  hello.py  main.py  shared_clock.py  test_load_ply.py
src-py/experiments/: mesh_shader_example copy.py  test_load_ply.py  test_namespace.py
src-py/preprocess/: fourier_calculations.py
src-py/ui/: framebar.py
